--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -2203,6 +2203,7 @@ boss__rsyslog__centralized__configmap_suffix: "-0-3-0"
 boss__rsyslog__centralized__create_namespace: "absent"
 boss__rsyslog__centralized__create_ingress: "present"
 boss__rsyslog__centralized__loglevel: "debug"
+boss__rsyslog__centralized__main_config_folder_prefix: "/rsyslog-centralized/etc"
 
 boss__rsyslog__centralized__deployment_spec_template_containers_resources: |
   limits:
@@ -2272,6 +2273,8 @@ boss__rsyslog__centralized__deployment_spec_template_containers_env: |-
     value: "6160"
   - name: _IMRELP_PORT
     value: "1601"
+  - name: RSYSLOG_CONF
+    value: "{{boss__rsyslog__centralized__main_config_folder_prefix}}/rsyslog.conf"
 
   - name: NODE_IP
     valueFrom:
@@ -2317,9 +2320,9 @@ boss__rsyslog__centralized__deployment_spec_template_spec_volumeMounts: |
   #   mountPath: /var/rsyslog-centralized
   # The Rsyslog config file to use
   - name: rsyslog-centralized-config
-    mountPath: /rsyslog-centralized/etc
+    mountPath: {{boss__rsyslog__centralized__main_config_folder_prefix}}
   - name: rsyslog-centralized-config-dot-d
-    mountPath: /rsyslog-centralized/etc/rsyslog.d
+    mountPath: {{boss__rsyslog__centralized__main_config_folder_prefix}}/rsyslog.d
 
 boss__rsyslog__centralized__deployment_spec_template_spec_volumes: |
   - name: work
