Feature: rsyslog container

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,6 +16,15 @@ become = True
 host_key_checking = False
 deprecation_warnings = False
 
+# SOURCE: https://raw.githubusercontent.com/ansible/ansible/devel/examples/ansible.cfg
+# format of string {{ ansible_managed }} available within Jinja2
+# templates indicates to users editing templates files will be replaced.
+# replacing {file}, {host} and {uid} and strftime codes with proper values.
+#ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
+# {file}, {host}, {uid}, and the timestamp can all interfere with idempotence
+# in some situations so the default is a static string:
+ansible_managed = Ansible managed | {file}
+
 # SOURCE: https://dzone.com/articles/speed-up-ansible
 # internal_poll_interval = 0.001
 
