Feature: rsyslog container

--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -2329,7 +2329,7 @@ boss__rsyslog__centralized__deployment_spec_template_spec_volumes: |
     emptyDir: {}
   # log file store (if used)
   - name: log
-    mountPath: {}
+    emptyDir: {}
   - name: container-config
     configMap:
       name: {{boss__rsyslog__centralized__shared_name}}-container-config{{boss__rsyslog__centralized__configmap_suffix}}
