Feature: rsyslog container

--- a/containers/rsyslog/rsyslog.conf
+++ b/containers/rsyslog/rsyslog.conf
@@ -5,7 +5,8 @@ global(processInternalMessages="on")
 global(parser.permitSlashInProgramName="on")
 # default location for work (spool) files
 # Raise limits within /etc/systemd/journald.conf on the host(s) - ie., RateLimitIntervalSec=30s + RateLimitBurst=1000000
-global(workDirectory="/var/spool/rsyslog")
+# global(workDirectory="/var/spool/rsyslog")
+global(workDirectory=`echo $_RSYSLOG_SPOOL_PATH`)
 
 # module(load="imjournal" ignorepreviousmessages="on" ratelimit.interval="60" ratelimit.burst="2000000" persiststateinterval="10000" statefile="/var/spool/rsyslog/imjournal.state")
 
