--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -2328,6 +2328,10 @@ boss__rsyslog__centralized__deployment_spec_template_spec_volumeMounts: |
   - name: rsyslog-centralized-config-dot-d
     mountPath: {{boss__rsyslog__centralized__main_config_folder_prefix}}/rsyslog.d
 
+  - name: localtime
+    mountPath: /etc/localtime
+    readOnly: true
+
 boss__rsyslog__centralized__deployment_spec_template_spec_volumes: |
   - name: work
     emptyDir: {}
@@ -2345,6 +2349,11 @@ boss__rsyslog__centralized__deployment_spec_template_spec_volumes: |
   - name: rsyslog-centralized-config-dot-d
     configMap:
       name: {{boss__rsyslog__centralized__shared_name}}-config-dot-d{{boss__rsyslog__centralized__configmap_suffix}}
+
+  - name: localtime
+    hostPath:
+      path: /etc/localtime
+      type: "FileOrCreate"
 
 boss__rsyslog__centralized__service_labels: |-
   k8s-app: {{boss__rsyslog__centralized__shared_name}}
