--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -2374,15 +2374,15 @@ boss__rsyslog__centralized__service_spec_ports: |-
   - name: in-udp
     port: {{boss__rsyslog__centralized__udp_in_port}}
     protocol: UDP
-    targetPort: in-udp
+    targetPort: {{boss__rsyslog__centralized__udp_in_port}}
   - name: in-tcp
     port: {{boss__rsyslog__centralized__tcp_in_port}}
     protocol: TCP
-    targetPort: in-tcp
+    targetPort: {{boss__rsyslog__centralized__tcp_in_port}}
   - name: in-relp
     port: {{boss__rsyslog__centralized__relp_in_port}}
     protocol: TCP
-    targetPort: in-relp
+    targetPort: {{boss__rsyslog__centralized__relp_in_port}}
 
 boss__rsyslog__centralized__service_spec_selector: |-
   k8s-app: {{boss__rsyslog__centralized__shared_name}}
