--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -2182,6 +2182,244 @@ boss__elasticsearch__exporter__deployment_spec_template_spec_containers_readines
   initialDelaySeconds: 10
   timeoutSeconds: 10
 
+
+##########################################################################################################
+# .########...######..##....##..######..##........#######...######............######..########.##....##.########.########.....###....##.......####.########.########.########.
+# .##.....##.##....##..##..##..##....##.##.......##.....##.##....##..........##....##.##.......###...##....##....##.....##...##.##...##........##.......##..##.......##.....##
+# .##.....##.##.........####...##.......##.......##.....##.##................##.......##.......####..##....##....##.....##..##...##..##........##......##...##.......##.....##
+# .########...######.....##.....######..##.......##.....##.##...####.#######.##.......######...##.##.##....##....########..##.....##.##........##.....##....######...##.....##
+# .##...##.........##....##..........##.##.......##.....##.##....##..........##.......##.......##..####....##....##...##...#########.##........##....##.....##.......##.....##
+# .##....##..##....##....##....##....##.##.......##.....##.##....##..........##....##.##.......##...###....##....##....##..##.....##.##........##...##......##.......##.....##
+# .##.....##..######.....##.....######..########..#######...######............######..########.##....##....##....##.....##.##.....##.########.####.########.########.########.
+##########################################################################################################
+boss__rsyslog__centralized__subdomain: rsyslog-centralized
+boss__rsyslog__centralized__manifest_path: "{{manifest_dir_path}}/rsyslog-centralized"
+boss__rsyslog__centralized__namespace_name: kube-system
+boss__rsyslog__centralized__rsyslog_version: latest
+boss__rsyslog__centralized__rsyslog_image_repo: "bossjones/rsyslog"
+boss__rsyslog__centralized__rsyslog_image_tag: "{{ boss__rsyslog__centralized__rsyslog_version }}"
+boss__rsyslog__centralized__shared_name: rsyslog-centralized
+boss__rsyslog__centralized__configmap_suffix: "-0-3-0"
+boss__rsyslog__centralized__create_namespace: "absent"
+boss__rsyslog__centralized__create_ingress: "present"
+boss__rsyslog__centralized__loglevel: "debug"
+boss__rsyslog__centralized__main_config_folder_prefix: "/rsyslog-centralized/etc"
+boss__rsyslog__centralized__udp_in_port: 6160
+boss__rsyslog__centralized__tcp_in_port: 6170
+boss__rsyslog__centralized__relp_in_port: 1601
+
+# NOTE: Test using this!
+# NOTE: Test using this!
+# NOTE: Test using this!
+#  malcolm  ⎇  feature-centralized-fluentd-aggregator {24}  ⓔ bosslab-playbooks2  ⓔ 2.4.3  ~/dev/bossjones/bosslab-playbooks   syslog-netcat-test rsyslog-centralized.scarlettlab.com 6170
+# Looks like a macOS
+# <150>Apr 10 00:17:13 darktop.localdomain syslog-netcat-test[76775]: testing baby
+# rsyslog-centralized.scarlettlab.com [192.168.205.10] 6170 open
+#  malcolm  ⎇  feature-centralized-fluentd-aggregator {24}  ⓔ bosslab-playbooks2  ⓔ 2.4.3  ~/dev/bossjones/bosslab-playbooks   syslog-netcat-test-udp rsyslog-centralized.scarlettlab.com 6160
+
+
+boss__rsyslog__centralized__deployment_spec_template_containers_resources: |
+  limits:
+    cpu: ".2"
+    memory: "100Mi"
+  requests:
+    cpu: "0.05"
+    memory: "10Mi"
+
+boss__rsyslog__centralized__serviceAccountName: "{{boss__rsyslog__centralized__shared_name}}"
+boss__rsyslog__centralized__deployment_spec_replicas: 3
+
+# boss__rsyslog__centralized__deployment_spec_template_containers_command: []
+
+boss__rsyslog__centralized__cluster_role_rules: |-
+  - apiGroups:
+    - ""
+    resources:
+    - "namespaces"
+    - "pods"
+    - "secrets"
+    - "pods/log"
+    - "deployments"
+    - "batch"
+    - "extensions"
+    - "crontabs"
+    verbs:
+    - "get"
+    - "watch"
+    - "list"
+    - "update"
+    - "post"
+
+boss__rsyslog__centralized__deployment_labels: |-
+  k8s-app: {{boss__rsyslog__centralized__shared_name}}
+  version: {{boss__rsyslog__centralized__rsyslog_version}}
+  kubernetes.io/cluster-service: "true"
+
+boss__rsyslog__centralized__deployment_spec_matchLabels: "disabled"
+
+# boss__rsyslog__centralized__deployment_spec_matchLabels: |-
+#   k8s-app: {{boss__rsyslog__centralized__shared_name}}
+#   version: {{boss__rsyslog__centralized__rsyslog_version}}
+
+boss__rsyslog__centralized__deployment_spec_template_metadata_labels: |-
+  k8s-app: {{boss__rsyslog__centralized__shared_name}}
+  version: {{boss__rsyslog__centralized__rsyslog_version}}
+  kubernetes.io/cluster-service: "true"
+
+boss__rsyslog__centralized__deployment_spec_template_metadata_annotations: "disabled"
+
+boss__rsyslog__centralized__deployment_spec_template_containers_ports: |-
+  - containerPort: {{boss__rsyslog__centralized__udp_in_port}}
+    name: in-udp
+    # this is TCP and not UDP on purpose
+    protocol: UDP
+  - containerPort: {{boss__rsyslog__centralized__tcp_in_port}}
+    name: in-tcp
+    protocol: TCP
+  - containerPort: {{boss__rsyslog__centralized__relp_in_port}}
+    name: in-relp
+    protocol: TCP
+
+boss__rsyslog__centralized__deployment_spec_template_containers_env: |-
+  - name: _IMTCP_PORT
+    value: "{{boss__rsyslog__centralized__tcp_in_port}}"
+  - name: _IMUDP_PORT
+    value: "{{boss__rsyslog__centralized__udp_in_port}}"
+  - name: _IMRELP_PORT
+    value: "{{boss__rsyslog__centralized__relp_in_port}}"
+  - name: RSYSLOG_CONF
+    value: "{{boss__rsyslog__centralized__main_config_folder_prefix}}/rsyslog.conf"
+  - name: _RSYSLOG_SPOOL_PATH
+    value: "/spool/rsyslog"
+
+  - name: NODE_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.hostIP
+  - name: POD_UID
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.uid
+  - name: POD_NAME
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.name
+  - name: POD_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.podIP
+  - name: POD_NAMESPACE
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.namespace
+  - name: NODE_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.hostIP
+  - name: NODE_NAME
+    valueFrom:
+      fieldRef:
+        fieldPath: spec.nodeName
+
+boss__rsyslog__centralized__deployment_spec_template_spec_volumeMounts: |
+  # rsyslog work files; do not share with multiple instances
+  - name: work
+    mountPath: /work
+  # log file store (if used)
+  - name: log
+    mountPath: /log
+  - name: spool
+    mountPath: /spool/rsyslog
+  # configuration files, can be mounted read-only once finalized
+  - name: container-config
+    mountPath: /config
+  # # The volume where Rsyslog stores persistent data (position databases for tracking ingested files)
+  # - name: fluent-data
+  #   mountPath: /var/rsyslog-centralized
+  # The Rsyslog config file to use
+  - name: rsyslog-centralized-config
+    mountPath: {{boss__rsyslog__centralized__main_config_folder_prefix}}
+  - name: rsyslog-centralized-config-dot-d
+    mountPath: {{boss__rsyslog__centralized__main_config_folder_prefix}}/rsyslog.d
+
+  - name: localtime
+    mountPath: /etc/localtime
+    readOnly: true
+
+
+boss__rsyslog__centralized__deployment_spec_template_spec_volumes: |
+  - name: work
+    emptyDir: {}
+  - name: spool
+    emptyDir: {}
+  # log file store (if used)
+  - name: log
+    emptyDir: {}
+  - name: container-config
+    configMap:
+      name: {{boss__rsyslog__centralized__shared_name}}-container-config{{boss__rsyslog__centralized__configmap_suffix}}
+  - name: rsyslog-centralized-config
+    configMap:
+      name: {{boss__rsyslog__centralized__shared_name}}-config{{boss__rsyslog__centralized__configmap_suffix}}
+  - name: rsyslog-centralized-config-dot-d
+    configMap:
+      name: {{boss__rsyslog__centralized__shared_name}}-config-dot-d{{boss__rsyslog__centralized__configmap_suffix}}
+
+  - name: localtime
+    hostPath:
+      path: /etc/localtime
+      type: "FileOrCreate"
+
+boss__rsyslog__centralized__service_labels: |-
+  k8s-app: {{boss__rsyslog__centralized__shared_name}}
+  version: {{boss__rsyslog__centralized__rsyslog_version}}
+  kubernetes.io/cluster-service: "true"
+
+boss__rsyslog__centralized__service_annotations: "disabled"
+
+boss__rsyslog__centralized__service_spec_type: ClusterIP
+
+boss__rsyslog__centralized__service_spec_ports: |-
+  - name: in-udp
+    port: {{boss__rsyslog__centralized__udp_in_port}}
+    protocol: UDP
+    targetPort: {{boss__rsyslog__centralized__udp_in_port}}
+  - name: in-tcp
+    port: {{boss__rsyslog__centralized__tcp_in_port}}
+    protocol: TCP
+    targetPort: {{boss__rsyslog__centralized__tcp_in_port}}
+  - name: in-relp
+    port: {{boss__rsyslog__centralized__relp_in_port}}
+    protocol: TCP
+    targetPort: {{boss__rsyslog__centralized__relp_in_port}}
+
+boss__rsyslog__centralized__service_spec_selector: |-
+  k8s-app: {{boss__rsyslog__centralized__shared_name}}
+
+boss__rsyslog__centralized__ingress_spec_rules_http_paths: |
+  - path: /
+    backend:
+      serviceName: {{boss__rsyslog__centralized__shared_name}}
+      servicePort: {{boss__rsyslog__centralized__udp_in_port}}
+
+boss__rsyslog__centralized__ingress_labels: |-
+  k8s-app: {{boss__rsyslog__centralized__shared_name}}
+  version: {{boss__rsyslog__centralized__rsyslog_version}}
+  kubernetes.io/cluster-service: "true"
+
+boss__rsyslog__centralized__ingress_annotations: |-
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
+
+boss__rsyslog__centralized__deployment_spec_template_spec_hostNetwork: True
+boss__rsyslog__centralized__deployment_spec_template_spec_hostPID: True
+
+
+boss__rsyslog__centralized__deployment_spec_template_spec_nodeSelector: |-
+  beta.kubernetes.io/os: linux
+
+boss__rsyslog__centralized__deployment_spec_template_spec_securityContext: "disabled"
+
 # ---
 # local_release_dir: /tmp/releases
 
