--- a/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/tasks/main.yaml
+++ b/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/tasks/main.yaml
@@ -11,6 +11,7 @@
     dest: "{{ boss__rsyslog__centralized__manifest_path }}/{{ item }}"
   with_items:
     - "0rsyslog-centralized.namespace.yaml"
+    - "0rsyslog-centralized.pvc.yaml"
     - "1rsyslog-centralized-service-account.yaml"
     - "2rsyslog-centralized-role.yaml"
     - "3rsyslog-centralized-role-binding.yaml"
