--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -2195,7 +2195,7 @@ boss__elasticsearch__exporter__deployment_spec_template_spec_containers_readines
 boss__rsyslog__centralized__subdomain: rsyslog-centralized
 boss__rsyslog__centralized__manifest_path: "{{manifest_dir_path}}/rsyslog-centralized"
 boss__rsyslog__centralized__namespace_name: kube-system
-boss__rsyslog__centralized__rsyslog_version: latest
+boss__rsyslog__centralized__rsyslog_version: 0.2.0
 boss__rsyslog__centralized__rsyslog_image_repo: "bossjones/rsyslog"
 boss__rsyslog__centralized__rsyslog_image_tag: "{{ boss__rsyslog__centralized__rsyslog_version }}"
 boss__rsyslog__centralized__shared_name: rsyslog-centralized
