--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -2207,7 +2207,7 @@ boss__rsyslog__centralized__main_config_folder_prefix: "/rsyslog-centralized/etc
 boss__rsyslog__centralized__udp_in_port: 6160
 boss__rsyslog__centralized__tcp_in_port: 6170
 boss__rsyslog__centralized__relp_in_port: 1601
-boss__rsyslog__centralized__path_to_logs_inside_container: "/logs"
+boss__rsyslog__centralized__path_to_logs_inside_container: "/log"
 boss__rsyslog__centralized__path_to_config_inside_container: "/config"
 boss__rsyslog__centralized__path_to_work_inside_container: "/work"
 boss__rsyslog__centralized__path_to_spool_inside_container: "/var/spool/rsyslog"
@@ -2422,6 +2422,7 @@ boss__rsyslog__centralized__deployment_spec_template_spec_volumeMounts: |
   # log file store (if used)
   - name: log
     mountPath: {{boss__rsyslog__centralized__path_to_logs_inside_container}}
+
   - name: spool
     mountPath: {{boss__rsyslog__centralized__path_to_spool_inside_container}}
     readOnly: false
